[Fea] HTML Header Markup

--- a/index.html
+++ b/index.html
@@ -20,6 +20,49 @@
 </head>
 <body>
 
+  <header class="header">
+    <nav class="header__nav">
+      <img class="header__logo" src="images/logo.svg" alt="">
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="#" class="header__link">
+            Features
+          </a>
+        </li>
+        <li class="header__item">
+          <a href="#" class="header__link">
+            Team
+          </a>
+        </li>
+        <li class="header__item">
+          <a href="#" class="header__link">
+            Sign In
+          </a>
+        </li>
+    </nav>
+
+    <section class="header__hero">
+      <div class="header__welcome">
+        <h1 class="header__title">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="header__desc">
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family,
+          and co-workers.
+        </p>
+        <form class="header__form" novalidate>
+          <input class="header__input" type="email" name="email" placeholder="Enter your email" aria-label="email">
+          <button class="header__submit" type="submit">Get Started</button>
+        </form>
+      </div>
+      <div class="header__image">
+        <img class="header__illustration" src="images/illustration-1.svg" width="1132" height="839" >
+      </div>
+
+    </section>
+  </header>
+
   Features
   Team
   Sign In
