[Fea] Main section markup

--- a/index.html
+++ b/index.html
@@ -63,6 +63,42 @@
     </section>
   </header>
 
+  <section class="main">
+    <section class="main__productivity">
+      <div class="main__info">
+        <h2 class="main__title">
+          Stay productive, wherever you are
+        </h2>
+        <p class="main__desc">
+          Never let location be an issue when accessing your files. Fylo has you 
+  covered for all of your file storage needs.
+        </p>
+        <p class="main__desc">
+          Securely share files and folders with friends, family and colleagues for 
+  live collaboration. No email attachments required!
+        </p>
+        <a class="main__link" href="#">
+          See how Fylo works <img class="main__arrow" src="images/icon-arrow.svg" alt="">
+        </a>
+        <div class="main__testimonial">
+          <p class="main__review">
+            Fylo has improved our team productivity by an order of magnitude. Since 
+  making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <div class="main__profile">
+            <img class="main__picture" src="images/avatar-testimonial.jpg" width="125" height="125" >
+            <div class="main__about">
+              <p class="main__name">Kyle Burton</p>
+              <p class="main__role">Founder & CEO, Huddle</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+  </section>
+
   Features
   Team
   Sign In
