--- a/index.html
+++ b/index.html
@@ -99,6 +99,25 @@
     </section>
   </section>
 
+  <section class="access">
+    <div class="access__info">
+      <h2 class="access__title">
+        Get early access today
+      </h2>
+      <p class="access__desc">
+        It only takes a minute to sign up and our free starter tier is extremely generous. 
+  If you have any questions, our support team would be happy to help you.
+      </p>
+    </div>
+
+    <div class="access__form" novalidate>
+      <input class="access__email" type="email" name="email" aria-label="email" placeholder="email@example.com">
+      <button class="access__submit" type="submit">Get Started For Free</button>
+    </div>
+  </section>
+
+  
+
   Features
   Team
   Sign In
