--- a/index.html
+++ b/index.html
@@ -116,7 +116,87 @@
     </div>
   </section>
 
-  
+  <footer class="footer">
+    <img class="footer__logo" src="images/logo.svg" alt="" width="166" height="49" >
+    <div class="footer__grid">
+      <div class="footer__category">
+        <div class="footer__contact">
+          <img class="footer__contact-icon" src="images/icon-phone.svg" alt="" width="18" height="18">
+          <p class="footer__contact-info">
+            Phone: +1-543-123-4567
+          </p>
+        </div>
+        <div class="footer__contact">
+          <img class="footer__contact-icon" src="images/icon-email.svg" alt="" width="20" height="16">
+          <p class="footer__contact-info">
+            example@fylo.com
+          </p>
+        </div>
+      </div>
+      <div class="footer__category">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              About Us
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Jobs
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Press
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Blog
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__category">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Contact Us
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Terms
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              Privacy
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__category">
+        <ul class="footer__socials">
+          <li class="footer__social">
+            <a class="footer__social-link" href="#">
+              <img class="footer__social-icon" src="images/icon-facebook.svg" alt="Facebook">
+            </a>
+          </li>
+          <li class="footer__social">
+            <a class="footer__social-link" href="#">
+              <img class="footer__social-icon" src="images/icon-twitter.svg" alt="Twitter">
+            </a>
+          </li>
+          <li class="footer__social">
+            <a class="footer__social-link" href="#">
+              <img class="footer__social-icon" src="images/icon-instagram.svg" alt="Instagram">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   Features
   Team
