[Fea] Desktop Header section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           and co-workers.
         </p>
         <form class="header__form" novalidate>
-          <input class="header__input" type="email" name="email" placeholder="Enter your email" aria-label="email">
+          <input class="header__input" type="email" name="email" placeholder="Enter your email..." aria-label="email">
           <button class="header__submit" type="submit">Get Started</button>
         </form>
       </div>
