[Fea] Main (Productivity) Section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         </div>
 
       </div>
+
+      <div class="main__image">
+        <img class="main__illustration" src="images/illustration-2.svg" alt="">
+      </div>
+
     </section>
   </section>
 
