--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
+    rel="stylesheet">
   <link href="styles/reset.css" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
 </head>
+
 <body>
 
   <header class="header">
@@ -57,7 +52,7 @@
         </form>
       </div>
       <div class="header__image">
-        <img class="header__illustration" src="images/illustration-1.svg" width="1132" height="839" >
+        <img class="header__illustration" src="images/illustration-1.svg" width="1132" height="839">
       </div>
 
     </section>
@@ -70,37 +65,33 @@
           Stay productive, wherever you are
         </h2>
         <p class="main__desc">
-          Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
         </p>
         <p class="main__desc">
-          Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
+          Securely share files and folders with friends, family and colleagues for
+          live collaboration. No email attachments required!
         </p>
         <a class="main__link" href="#">
           See how Fylo works <img class="main__arrow" src="images/icon-arrow.svg" alt="">
         </a>
         <div class="main__testimonial">
           <p class="main__review">
-            Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+            Fylo has improved our team productivity by an order of magnitude. Since
+            making the switch our team has become a well-oiled collaboration machine.
           </p>
           <div class="main__profile">
-            <img class="main__picture" src="images/avatar-testimonial.jpg" width="125" height="125" >
+            <img class="main__picture" src="images/avatar-testimonial.jpg" width="125" height="125">
             <div class="main__about">
               <p class="main__name">Kyle Burton</p>
               <p class="main__role">Founder & CEO, Huddle</p>
             </div>
           </div>
-
         </div>
-
       </div>
-
       <div class="main__image">
         <img class="main__illustration" src="images/illustration-2.svg" alt="">
       </div>
-
     </section>
   </section>
 
@@ -110,8 +101,8 @@
         Get early access today
       </h2>
       <p class="access__desc">
-        It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+        It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.
       </p>
     </div>
 
@@ -122,7 +113,7 @@
   </section>
 
   <footer class="footer">
-    <img class="footer__logo" src="images/logo.svg" alt="" width="166" height="49" >
+    <img class="footer__logo" src="images/logo.svg" alt="" width="166" height="49">
     <div class="footer__grid">
       <div class="footer__category">
         <div class="footer__contact">
@@ -201,60 +192,11 @@
         </ul>
       </div>
     </div>
-  </footer>
-
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/NiteArie" target="_blank">tien.nguyen</a>.
     </p>
   </footer>
 </body>
+
 </html>
